# CSE-461

./: .gitmodules
RayTracing/: .gitignore  CMakeLists.txt  Readme.md  build.bat  image.ppm  main.cpp  make.bat  objtoxml.py  output.xml  scene_cat.xml  scene_chest.xml  scene_spheres.xml
RayTracing/source/: ambient_light.h  box.h  directional_light.h  hittable.h  hittable_list.h  light.h  mesh_object.h  point_light.h  sphere.h  vec3.h
